# PyGameRecorder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: event_ex1.py  event_ex2.py  events_ex1.json  events_ex2.json  screenshot.ipynb  show_case.py
src/pygame-screen-record/: EventRegister.py  ScreenRecorder.py
src/pygame_screen_record/: EventRegister.py  ScreenRecorder.py  __init__.py
tests/: event_ex1.py  event_ex2.py  events_ex2.json  screenshot.ipynb  show_case.py  test_compress.py  test_save.py
