[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame-screen-record"
version = "0.0.0"
authors = [
  { name="Rashid Harvey", email="rashid.harvey@fu-berlin.de" },
]
description = "A package that allows you to record your pygame "
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "tinycss     == 0.4",
    "pygame      == 2.1.3",
    "watchdog    == 2.2.1",
    "frozendict  == 2.3.4",
    "html5lib    == 1.1",
    "numpy       == 1.24.2",
    "aiohttp     == 3.8.4",
    "aiofiles    == 23.1.0",
    "aiodns      == 3.0.0",
    "cchardet    == 2.1.7",
    "lxml        == 4.9.2",
    "Jinja2      == 3.1.2",
]

[project.optional-dependencies]
console = ["aioconsole  == 0.5.0"]

examples = ["math_evaluator == 0.0.2"]

dev = [
    "pytest         == 7.2.1", 
    "pytest-asyncio == 0.20.3",
    "black          == 23.1.0",
    "mypy           == 1.0.1"
]

all = [
    "aioconsole  == 0.5.0",
    "math_evaluator == 0.0.2",
    "pytest         == 7.2.1", 
    "pytest-asyncio == 0.20.3",
    "black          == 23.1.0",
    "mypy           == 1.0.1"
]

[project.urls]
"Homepage" = "https://github.com/theRealProHacker/PyGameRecorder"
"Bug Tracker" = "https://github.com/theRealProHacker/PyGameRecorder/issues"

[tool.isort]
profile = "black"