[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame-screen-record"
version = "0.1.1"
authors = [
  { name="Rashid Harvey", email="r.harvey@outlook.de" },
]
description = "A package that allows you to record your pygame game"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "opencv_python >= 4.7.0.68",
    "pygame >= 2.1.3"
]

[project.urls]
"Homepage" = "https://github.com/theRealProHacker/PyGameRecorder"
"Bug Tracker" = "https://github.com/theRealProHacker/PyGameRecorder/issues"
